--- a/test.html
+++ b/test.html
@@ -21,7 +21,7 @@
 		//funnyFunction.obj.callFn(test,'b','c');
 		console.log('funnyFunction.math.decimal:' + funnyFunction.math.decimal(123.45678,2));
 		console.log('funnyFunction.math.accMul:' + funnyFunction.math.accMul('123.145','10.13333323'));
- 
+ 		console.log('funnyFunction.baseType.is:' + funnyFunction.baseType.is('Array',[]));
 	</script>
 </body>
 </html>
