整理方法 累计10个 Signed-off-by: chenchangwen <21108589@qq.com>

--- a/funnyFunction.html
+++ b/funnyFunction.html
@@ -34,7 +34,7 @@
                   var runResult =eval($("."+run+'Run').eq(runIndex).val());
                   if(funnyFunction.baseType.is("Object"),runResult)
                   {
-                     var obj = funnyFunction.string.objectToStr(runResult);
+                     var obj = funnyFunction.convertObjectToString(runResult);
                      obj = obj.replace(/\,/ig,',\r\n').replace(/\{/ig,'\{\r\n').replace(/\}\w?/ig,'\r\n\}');
                      $this.before('<div class="showType"><pre><code class="html hljs">'+obj+'</code></pre></div>');
                   }
