增加 dateDiff 方法 日期-计算两个日期之间的(时|分|秒|日|周|月|年) 差 Signed-off-by: chenchangwen <21108589@qq.com>

--- a/funnyFunction.html
+++ b/funnyFunction.html
@@ -40,7 +40,8 @@
                   }
                }
             });
-        });
+           });
+
     </script>
 </head>
 
@@ -59,7 +60,7 @@
             <script id="funnyMenuTmpl" type="text/x-dot-template">
                 {{ for(var objs in it) { }}
                 <li class="pure-menu-item">
-                    <a href="#{{=objs}}" class="pure-menu-link">{{=objs}}</a>
+                    <a href="#{{=objs}}" title="{{=it[objs].dest}}" class="pure-menu-link">{{=objs}}</a>
                 </li> 
                 {{ } }}
             </script>
