修正描述 改进方法 优化模板 新增2个方法 新增methods mark Signed-off-by: chenchangwen <21108589@qq.com>

--- a/funnyFunction.html
+++ b/funnyFunction.html
@@ -47,11 +47,16 @@
                   }
                }
             });
+            
+            $("#fnCount span").text($('.pure-menu-item').length);
         });
     </script>
 </head>
 
 <body>
+    <div id="fnCount">
+      <h2>Methods :<span></span></h2>
+    </div>
     <div id="layout">
         <div id="menu">
             <div class="pure-menu">
